# target-s3-parquet

./: .gitignore  CODEOWNERS  README.md  catalog-info.yaml  meltano.yml  pyproject.toml  target-s3-parquet.sh
.github/workflows/: ci.yml  codeql-analysis.yml
target_s3_parquet/: data_type_generator.py  flattening.py  sanitizer.py  sinks.py  target.py
target_s3_parquet/tests/: __init__.py  test_core.py  test_data_transformation.py  test_data_type_generator.py  test_flattening.py
